--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 <head>
-  <title>Wild Blog App</title>
-    <!-- External CSS and FONT via CDN -->
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- External scripts via CDN -->
-    <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>  
+	<title>Wild Blog App</title>
+	<!-- External CSS and FONT via CDN -->
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+	<link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!-- External scripts via CDN -->
+	<script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>  
 </head>
 <body class="grey lighten-4">
-    <!-- ui-view contains the nested views needed by ui-router -->
-    <ui-view></ui-view>
+	<!-- ui-view contains the nested views needed by ui-router -->
+	<ui-view></ui-view>
 </body>
 
 <script src="js/app.min.js"></script>
